<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Stability Test</string>
    <string name="back_return">返回</string>
    <string name="test_fail">失败</string>
    <string name="test_succeed">成功</string>
    <string name="test_stop">停止</string>
    <string name="single_item_test">单项测试</string>
    <string name="phone_info">手机信息</string>
    <string name="Vibrator_test">振动</string>
    <string name="Speaker_test">Receiver</string>
    <string name="LCD_test">LCD</string>
    <string name="Camera_test">Camera</string>
    <string name="soft_version">版本号：</string>
    <string name="no_test_report">unknown</string>
    <string name="barcode">SN: </string>
    <string name="device_imei">IMEI: </string>
    <string name="vibrator_testting_1">马达测试</string>
    <string name="vibrator_testting">马达测试中，按停止按钮结束测试</string>
    <string name="vibrator_stop">马达测试停止</string>
    <string name="camera_takephoto_repeat_test">camear反复拍照测试</string>
	<string name="camera_switch_test">camear切换测试</string>
	<string name="camera_pen_off_test">camera上电下电测试</string>
	<string name="camera_repeat_times">循环次数：</string>
	<string name="camera_selected">摄像头选择：</string>
	<string name="main_back_camera">后摄像头</string>
	<string name="sub_front_camera">前摄像头</string>
	<string name="default_repeat_times_200">默认200次</string>
	<string name="camera_test_item_select">相机测试项选择：</string>
	<string name="ok_button">确定</string>
	<string name="back_camera_title_text">相机测试</string>
	<string name="camera_test_title">相机测试</string>
	<string name="light_msg_text">注意闪光灯是否被打开？</string>
	   <string name="text_pass">通过</string>
    <string name="text_fail">失败</string>
    <string name="text_change_camera">切换摄像头</string>
    <string name="image_file_name_format" translatable="false">"'IMG'_yyyyMMdd_HHmmssSSS"</string>
    <string name="only_back_camera">只有后置摄像头，请重新选择!</string>
    <string name="not_choose_testtype">没有选择测试类型，请重新选择!</string>
    
    <string name="torchlight_test">手电筒测试</string>
     <string name="torchlight_onoff">手电筒开关机测试</string>
     <string name="torchlight_long">手电筒长时间工作测试</string>
     <string name="torchlight_testting">手电筒测试中，按返回按钮结束测试</string>
     
    <string name="receiver_testting_1">听筒测试</string>
    <string name="receiver_testting">听筒播放测试mp3,播放停止</string>
    <string name="receiver_stop">mp3播放停止</string>
    <string name="Reboot_test">重启测试</string>
    <string name="usr_cancel_reboot">重启被取消</string>
    
     <string name="gsensor_test">Gsensor测试</string>
     <string name="Xtag">X-axis: </string>
     <string name="Ytag">Y-axis: </string>
     <string name="Ztag">Z-axis: </string>
     <string name="XValue"></string>
     <string name="YValue"></string>
     <string name="ZValue"></string>
     
    <string name="fm_test">FM测试</string>
    <string name="frequency">frequency</string>
    <string name="speaker">speaker</string>
    <string name="headset">headset</string>
    <string name="setfrequency">setfrequency</string>
    <string name="fm_dialog_tittle">Please plug your headset</string>
    <string name="fm_dialog_message">Please plug your headset</string>
    <string name="headsetplaying">Headset Playing</string>
    <string name="SpeakerPlaying">Speaker Playing</string>
    <string name="freqvalue"></string>
    
    <string name="hello1">Flash read and write test</string>
    <string name="app_name1">FlashTest</string>
    <string name="Button01">stop</string>

    <string name="hello">TF card read and write test</string>
    <string name="TF_test">hwtest</string>

    <string name="simstatus_test">SimTaskTest</string>
    <string name="test_duration_lable">test duration(unit:H)</string>
    <string name="test_number_lable">test number</string>
    <string name="test_call_duration_lable">call_duration(unit:m)</string>
    <string name="test_r_w_frequency_lable">read and write sim phone number recorded frequency(unit:s)</string>
    <string name="test_task_reset_lable">sim task reset</string>
    <string name="test_start_button">start</string>
</resources>
