<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    >
    <LinearLayout 
    android:id="@+id/linearLayout1" 
    android:layout_height="wrap_content" 
    android:layout_width="match_parent"
    android:orientation="horizontal">
     <TextView android:text="@string/Xtag" android:id="@+id/textXTag" android:layout_width="wrap_content" android:layout_height="wrap_content"></TextView>
     <TextView android:text="@string/XValue" android:id="@+id/textXValue" android:layout_width="wrap_content" android:layout_height="wrap_content"></TextView> 
    </LinearLayout>
    <LinearLayout 
    android:id="@+id/linearLayout2" 
    android:layout_height="wrap_content" 
    android:layout_width="match_parent"
    android:orientation="horizontal">
     <TextView android:text="@string/Ytag" android:id="@+id/textYTag" android:layout_width="wrap_content" android:layout_height="wrap_content"></TextView>
     <TextView android:text="@string/YValue" android:id="@+id/textYValue" android:layout_width="wrap_content" android:layout_height="wrap_content"></TextView> 
    </LinearLayout>   
    <LinearLayout 
    android:id="@+id/linearLayout3" 
    android:layout_height="wrap_content" 
    android:layout_width="match_parent"
    android:orientation="horizontal">
     <TextView android:text="@string/Ztag" android:id="@+id/textZTag" android:layout_width="wrap_content" android:layout_height="wrap_content"></TextView>
     <TextView android:text="@string/ZValue" android:id="@+id/textZValue" android:layout_width="wrap_content" android:layout_height="wrap_content"></TextView> 
    </LinearLayout>     
        <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_weight="1"
        android:gravity="center">
        <TextView
            android:id="@+id/txt_sensor_arrow"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@null" />
    </LinearLayout>  
</LinearLayout>
