<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    >
    <LinearLayout
       android:orientation="horizontal" 
       android:layout_width="match_parent" 
       android:layout_height="wrap_content" 
       android:id="@+id/linearLayout1"
       >
       <TextView 
        android:text="@string/frequency" 
        android:id="@+id/textFreq" 
        android:layout_width="wrap_content" 
        android:layout_height="wrap_content"
       >
       </TextView>
       
       <EditText 
        android:text="@string/freqvalue"
        android:id="@+id/editFreq" 
        android:layout_height="wrap_content" 
        android:layout_width="match_parent">
                    <requestFocus />
       </EditText>
    </LinearLayout>  
    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_weight="1"
        android:gravity="center">
       <TextView 
        android:text="@string/headsetplaying" 
        android:id="@+id/headsetplaying" 
        android:layout_width="wrap_content" 
        android:layout_height="wrap_content"
       >
       </TextView>
    </LinearLayout>  
   <RelativeLayout
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_weight="1"
        android:gravity="bottom">
        <Button
        android:layout_alignParentLeft="true" 
        android:id="@+id/btnSetFreq" 
        android:layout_height="wrap_content" 
        android:text="@string/setfrequency" 
        android:layout_width="wrap_content">
        </Button>
        <Button
        android:layout_alignParentRight="true" 
        android:id="@+id/btnHeadset" 
        android:layout_height="wrap_content" 
        android:text="@string/headset" 
        android:layout_width="wrap_content">
        </Button>
    </RelativeLayout>  
</LinearLayout>
